# image_creator

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Makefile  README.md  pyproject.toml
.agents/mcp/compas/: quality_contract.toml
.agents/mcp/compas/plugins/default/: plugin.toml
.agents/mcp/compas/witness/: chain.json  gate_ci_fast.json
.agents/skills/: SKILLS.md
.agents/skills/repo-intent/: SKILL.md
docs/: index.md
docs/changes/CHG-2026-03-18-ai-first-harness-bootstrap/: change.md
docs/contracts/: edit-image.md  generate-image.md  remove-background.md
docs/usage/: codex-mcp.md
skills/image-generation/: SKILL.md
skills/image-generation/agents/: openai.yaml
skills/image-generation/references/: profile-selection.md  prompting-patterns.md  reference-images.md  tool-surface.md
src/image_creator/: AGENTS.md  background_removal.py  config.py  contracts.py  image_io.py  image_profiles.py  prompting.py  server.py  service.py  smoke.py  storage.py  verify_model_catalog.py
src/image_creator/.agents/skills/: SKILLS.md
src/image_creator/.agents/skills/image-pipeline/: SKILL.md
src/image_creator/providers/: __init__.py  base.py  common.py  gemini.py  openrouter.py
tests/: test_background_removal.py  test_image_io.py  test_image_profiles.py  test_provider_gemini.py  test_provider_http.py  test_provider_openrouter.py  test_server.py  test_service.py  test_storage.py
tools/custom/python-mypy/: tool.toml
tools/custom/python-pytest/: tool.toml
tools/custom/python-ruff/: tool.toml
