[project]
name = "image-creator-mcp"
version = "0.1.0"
description = "AI-first MCP server that turns image APIs into one stable file-output tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]>=1.2.0",
  "httpx>=0.27,<1",
  "python-dotenv>=1,<2",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/image_creator"]

[project.scripts]
image-creator-mcp = "image_creator.server:main"

[dependency-groups]
dev = [
  "mypy>=1.11,<2",
  "pytest>=8,<9",
  "ruff>=0.11,<1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
strict = true
warn_unused_ignores = true
disallow_any_generics = true
